Fix popup too large

--- a/scss/_infowindow.scss
+++ b/scss/_infowindow.scss
@@ -130,10 +130,6 @@
   display: inline-block;
 }
 
-.o-image-content {
-  display: inline-block;
-}
-
 .folded {
   max-height: 0;
   overflow: hidden;
